[package]
name = "kaps"
version = "0.1.0"
edition = "2021"
authors = ["archer"]
description = "Simple and performant screenshot application for Xorg."

[dependencies]
png = "0.17"
x11 = { version = "2.19", features = ["xlib"] }
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
home = "0.5.3"

